[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/SiteInfoRT.gd" type="Script" id=1]
[ext_resource path="res://UI/SiteInfoPanel.gd" type="Script" id=2]
[ext_resource path="res://UI/pop_shortcut.tres" type="ShortCut" id=3]
[ext_resource path="res://images/icon/icon_starmap.png" type="Texture" id=4]
[ext_resource path="res://images/icon/icon_menuofficer.png" type="Texture" id=5]
[ext_resource path="res://images/icon/icon_shipmanagement.png" type="Texture" id=6]
[ext_resource path="res://images/icon/icon_bait.png" type="Texture" id=7]
[ext_resource path="res://images/icon/icon_launchship.png" type="Texture" id=8]
[ext_resource path="res://images/icon/icon_retreat.png" type="Texture" id=9]
[ext_resource path="res://images/icon/equipment_icon1_VECTOR2.png" type="Texture" id=10]
[ext_resource path="res://font/icon_font.tres" type="DynamicFont" id=11]

[node name="SiteInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.780392 )
anchor_left = 0.0712891
anchor_top = 0.095
anchor_right = 0.362305
anchor_bottom = 0.933333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.0838925
anchor_top = 0.053678
anchor_right = 0.909395
anchor_bottom = 0.940358
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Info" type="RichTextLabel" parent="Panel/ScrollContainer"]
margin_right = 246.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 11 )
bbcode_enabled = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.666992
anchor_top = 0.271667
anchor_right = 0.829102
anchor_bottom = 0.771667
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Region" type="Button" parent="Menu"]
margin_right = 166.0
margin_bottom = 18.0
text = "Region"
icon = ExtResource( 4 )
expand_icon = true

[node name="Officer" type="Button" parent="Menu"]
margin_top = 22.0
margin_right = 166.0
margin_bottom = 40.0
text = "Officer"
icon = ExtResource( 5 )
expand_icon = true

[node name="Ship" type="Button" parent="Menu"]
margin_top = 44.0
margin_right = 166.0
margin_bottom = 62.0
text = "Ship"
icon = ExtResource( 6 )
expand_icon = true

[node name="Weapons" type="Button" parent="Menu"]
margin_top = 66.0
margin_right = 166.0
margin_bottom = 84.0
text = "Weapons"
icon = ExtResource( 7 )
expand_icon = true

[node name="Equipment" type="Button" parent="Menu"]
margin_top = 88.0
margin_right = 166.0
margin_bottom = 106.0
text = "Equipment"
icon = ExtResource( 10 )
expand_icon = true

[node name="Fleet" type="Button" parent="Menu"]
margin_top = 110.0
margin_right = 166.0
margin_bottom = 128.0
text = "Fleet"
icon = ExtResource( 8 )
expand_icon = true

[node name="---" type="Label" parent="Menu"]
margin_top = 199.0
margin_right = 166.0
margin_bottom = 211.0
size_flags_vertical = 6

[node name="Exit" type="Button" parent="Menu"]
margin_top = 282.0
margin_right = 166.0
margin_bottom = 300.0
shortcut = ExtResource( 3 )
text = "Exit"
icon = ExtResource( 9 )
expand_icon = true
[connection signal="visibility_changed" from="Panel/ScrollContainer/Info" to="." method="_on_Info_visibility_changed"]
[connection signal="pressed" from="Menu/Region" to="." method="_on_Region_pressed"]
[connection signal="pressed" from="Menu/Officer" to="." method="_on_Officer_pressed"]
[connection signal="pressed" from="Menu/Ship" to="." method="_on_Ship_pressed"]
[connection signal="pressed" from="Menu/Weapons" to="." method="_on_Weapons_pressed"]
[connection signal="pressed" from="Menu/Fleet" to="." method="_on_Launch_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
